corrects z-index error on rollUp in main App route

--- a/src/routes/index.less
+++ b/src/routes/index.less
@@ -6,7 +6,7 @@
   background-color: @grey800;
   color: @grey50;
   height: @navigatorHeight;
-  z-index: 1035;
+  z-index: 99;
 }
 
 .rollUpHandle {
@@ -20,7 +20,7 @@
   border-right: 1px solid @grey600;
   border-bottom: 1px solid @grey600;
   border-radius: 0 0 2px 2px;
-  z-index: 1;
+  z-index: 100;
   &:hover {
     color: @grey300;
     border-left: 1px solid @grey300;
